[tool.poetry]
name = "decodex"
version = "0.2.1"
description = "Python package to decode dex actions"
authors = ["alan890104 <alan890104@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
web3 = "5.30"
pandas = "^2.0.3"
pyfiglet = "^0.8.post1"
click = "^8.1.7"
colorama = "^0.4.6"
requests = "^2.31.0"
tqdm = "^4.66.1"
multicall-py = "^1.1.0"
wget = "^3.2"
tabulate = "^0.9.0"
jinja2 = "^3.1.2"

[tool.poetry.scripts]
decodex = "decodex.__main__:cli"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
plugins = ["python_dotenv"]
